[gd_scene load_steps=22 format=3 uid="uid://dmd2ag684ejp6"]

[ext_resource type="Script" path="res://scripts/environment.gd" id="1_8ewvv"]
[ext_resource type="PackedScene" uid="uid://c7lcg0ondtpjm" path="res://scenes/cheese.tscn" id="2_p37fu"]
[ext_resource type="PackedScene" uid="uid://b22wcsut0vmkq" path="res://scenes/mouse.tscn" id="4_5rfca"]
[ext_resource type="PackedScene" uid="uid://dh8v072vlua6y" path="res://scenes/cat.tscn" id="4_vw5gx"]
[ext_resource type="PackedScene" uid="uid://bm4fpsa4xgpd5" path="res://scenes/spikes.tscn" id="5_d4qnm"]
[ext_resource type="PackedScene" uid="uid://dny63byg1feub" path="res://scenes/health.tscn" id="6_cypi6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_0jprh"]

[sub_resource type="BoxMesh" id="BoxMesh_2m0xh"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0yuyd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_7f1wc"]

[sub_resource type="BoxMesh" id="BoxMesh_vj3kn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qy7yc"]
albedo_color = Color(0.687943, 0.477077, 0.711988, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_xn65f"]
top_radius = 2.0
bottom_radius = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cwjnt"]
transparency = 1
albedo_color = Color(0.670588, 0.0431373, 0, 0.411765)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j5qme"]
radius = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_ldcs5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_pcgy4"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_ddy83"]
points = PackedVector3Array(-1, -1, -1.5, 1, -1, -1.5, -1, -1, 1.5, 1, -1, 1.5, -1, 1, 1.5, 1, 1, 1.5)

[sub_resource type="QuadMesh" id="QuadMesh_8geqe"]
size = Vector2(2, 3.5)

[sub_resource type="BoxMesh" id="BoxMesh_fbqyy"]

[sub_resource type="BoxShape3D" id="BoxShape3D_is42o"]

[node name="Environment" type="Node"]
script = ExtResource("1_8ewvv")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.699469, 0.475616, 0.533416, 0.0669873, -0.699469, 0.711517, 0.711516, 0.533416, 0.457397, 0, 18.8084, 0)
light_color = Color(0.9, 0.8658, 0.558, 1)
shadow_enabled = true

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="scoreLabel" type="Label" parent="Control"]
modulate = Color(0.309804, 1, 0.176471, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.5
offset_top = 140.0
offset_right = 45.5
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
text = "Hello World"
horizontal_alignment = 1
vertical_alignment = 1

[node name="lifeLabel" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = 116.0
offset_right = 20.0
offset_bottom = 139.0
grow_horizontal = 2
grow_vertical = 2
text = "Life"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Ground" type="StaticBody3D" parent="."]
transform = Transform3D(100, 0, 0, 0, 2, 0, 0, 0, 100, 0, -1, 0)
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
shape = SubResource("BoxShape3D_0jprh")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
mesh = SubResource("BoxMesh_2m0xh")
surface_material_override/0 = SubResource("StandardMaterial3D_0yuyd")

[node name="Boxes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.815, 3.3, -8.893)

[node name="Box" type="StaticBody3D" parent="Boxes"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/Box"]
shape = SubResource("BoxShape3D_7f1wc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boxes/Box"]
mesh = SubResource("BoxMesh_vj3kn")
surface_material_override/0 = SubResource("StandardMaterial3D_qy7yc")

[node name="Box2" type="StaticBody3D" parent="Boxes"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.000400066, -1.3, -4.9996)
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/Box2"]
shape = SubResource("BoxShape3D_7f1wc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boxes/Box2"]
mesh = SubResource("BoxMesh_vj3kn")
surface_material_override/0 = SubResource("StandardMaterial3D_qy7yc")

[node name="Box3" type="StaticBody3D" parent="Boxes"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.000400066, 3.7, -4.9996)
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/Box3"]
shape = SubResource("BoxShape3D_7f1wc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boxes/Box3"]
mesh = SubResource("BoxMesh_vj3kn")
surface_material_override/0 = SubResource("StandardMaterial3D_qy7yc")

[node name="Box4" type="StaticBody3D" parent="Boxes"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.000400066, -1.3, 5.00037)
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/Box4"]
shape = SubResource("BoxShape3D_7f1wc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boxes/Box4"]
mesh = SubResource("BoxMesh_vj3kn")
surface_material_override/0 = SubResource("StandardMaterial3D_qy7yc")

[node name="Box5" type="StaticBody3D" parent="Boxes"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -0.000400066, 3.7, 5.00037)
collision_layer = 3
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Boxes/Box5"]
shape = SubResource("BoxShape3D_7f1wc")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Boxes/Box5"]
mesh = SubResource("BoxMesh_vj3kn")
surface_material_override/0 = SubResource("StandardMaterial3D_qy7yc")

[node name="cheese" parent="." instance=ExtResource("2_p37fu")]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 1, 0.5, -8.261)

[node name="cat" parent="." instance=ExtResource("4_vw5gx")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -2)
collision_layer = 16
collision_mask = 15

[node name="mouse" parent="." instance=ExtResource("4_5rfca")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.07177, 0, 1.69861)
collision_layer = 16
collision_mask = 15

[node name="catEntryArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -2)
collision_mask = 16

[node name="MeshInstance3D" type="MeshInstance3D" parent="catEntryArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CylinderMesh_xn65f")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("StandardMaterial3D_cwjnt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="catEntryArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_j5qme")

[node name="SmallBox" type="StaticBody3D" parent="."]
transform = Transform3D(3, 0, 0, 0, 2, 0, 0, 0, 3, -5, 1, -9)
collision_layer = 3
collision_mask = 16

[node name="MeshInstance3D" type="MeshInstance3D" parent="SmallBox"]
mesh = SubResource("BoxMesh_ldcs5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="SmallBox"]
shape = SubResource("BoxShape3D_pcgy4")

[node name="Ramp" type="StaticBody3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.82638, 0.913083, -9)
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ramp"]
shape = SubResource("ConvexPolygonShape3D_ddy83")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ramp"]
transform = Transform3D(1, 0, 0, 0, -0.566636, 0.823968, 0, -0.823968, -0.566636, 0, 0, 0)
mesh = SubResource("QuadMesh_8geqe")

[node name="spikes" parent="." instance=ExtResource("5_d4qnm")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)
collision_layer = 8
collision_mask = 16

[node name="spikeArea" parent="spikes" index="2"]
collision_layer = 8
collision_mask = 16

[node name="health" parent="." instance=ExtResource("6_cypi6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 0)

[node name="health2" parent="." instance=ExtResource("6_cypi6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1, 4)

[node name="slopedWall" type="StaticBody3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 4.82963, -1.2941, 0, 1.2941, 4.82963, 0, 0, 7)
collision_mask = 16

[node name="MeshInstance3D" type="MeshInstance3D" parent="slopedWall"]
mesh = SubResource("BoxMesh_fbqyy")

[node name="CollisionShape3D" type="CollisionShape3D" parent="slopedWall"]
shape = SubResource("BoxShape3D_is42o")

[connection signal="body_entered" from="cheese/cheeseArea3D" to="." method="_on_cheese_area_3d_body_entered"]
[connection signal="body_entered" from="catEntryArea" to="." method="_on_cat_entry_area_body_entered"]
[connection signal="body_exited" from="catEntryArea" to="." method="_on_cat_entry_area_body_exited"]
[connection signal="body_entered" from="spikes/spikeArea" to="." method="_on_spike_area_body_entered"]
[connection signal="body_entered" from="health/healthArea3D" to="." method="_on_health_area_3d_body_entered"]

[editable path="cheese"]
[editable path="spikes"]
[editable path="health"]
[editable path="health2"]
